--- a/docusaurus/src/css/custom.css
+++ b/docusaurus/src/css/custom.css
@@ -378,9 +378,13 @@ nav a.navbar__link--active {
   margin-bottom: 0;
 }
 
-/* Force no margin on the bottom when inside a flex container */
+/* Force no margin on the h1 when inside a flex container, but add margin to the header itself */
 header h1 {
   margin-bottom: 0;
+}
+
+article > header {
+  margin-bottom: 0.5rem;
 }
 
 article span.theme-doc-version-badge {
